# trading_bot

./: .gitignore  DEPLOY.md  Dockerfile  SECURITY_CONFIG_UPDATE.md  docker-compose.yml  env.example  pyproject.toml  run_backtest.py  run_live.py
.cursor/commands/: commit.md  create-pr.md
.cursor/rules/: commit-conventions.md
app/: test_data.py
app/backtesting/: engine.py
app/config/: models.py
app/core/: bot.py  database.py  enums.py  interfaces.py  strategy_factory.py
app/data/: handler.py
app/execution/: __init__.py  binance_executor.py  mock_executor.py
app/models/: __init__.py  sql.py
app/repositories/: __init__.py  base.py  signal_repository.py  trade_repository.py
app/strategies/: atr_strategy.py  bollinger_band.py  momentum_filters.py  regime_filters.py  sma_cross.py
docs/: BACKTEST_CLI_GUIDE.md  OPTIMIZATION_EXAMPLE.md  OPTIMIZATION_GUIDE.md  WALK_FORWARD_GUIDE.md
settings/: config.json  dev-log.md  optimization_analysis_prompt.md  prompt.md  sma_config.json
settings/steps_log/: STEP_10.5_COMPLETION_REPORT.md  STEP_10_COMPLETION_REPORT.md  STEP_11_OPTIMIZATION_COMPLETION.md  STEP_12_WALK_FORWARD_COMPLETION.md  STEP_13_COMPLETION_REPORT.md  STEP_16_COMPLETION_REPORT.md  (+22 more)
tests/: test_atr_strategy.py  test_backtest_cli.py  test_binance_executor.py  test_engine_logic.py  test_execution.py  test_momentum_filter.py  test_persistence.py  test_system_flow.py  test_time_aware_data.py  test_trading_bot.py
tools/: QUICK_START.md  README.md  analyze_backtest.py  analyze_optimization.py  diagnose_adx_filter.py  optimize_strategy.py
