[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Bot BTC Scalable"
authors = ["Santiago <santiagogabrielcastillo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
numpy = "^2.3.5"
ccxt = "^4.5.20"
pydantic = "^2.12.4"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-mock = "^3.15.1"
ruff = "^0.14.5"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests/test_*.py"]
